examples/test/testpolicy9890.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9890
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key3: value17
      key2: value0
      key23: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value8
          key45: value3
      podSelector:
        matchLabels:
          key30: value13
